Ensure that images on the Swimming Page are not truncated

--- a/src/containers/SwimmingCoaches/coaches.scss
+++ b/src/containers/SwimmingCoaches/coaches.scss
@@ -1,5 +1,20 @@
 .swimming-coaches {
   min-height: 100vh;
+
+  .article-card {
+    .article-image {
+      .carousel-item {
+        height: 600px;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+  }
+
 }
 
 @media screen and (max-width: 800px) {
